<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dip"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/more_fragment_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/gender_text"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dp"
                android:layout_width="175dp"
                android:text="Gender:" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dp"
                android:prompt="@string/more_fragment_gender" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/age_range_text"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dp"
                android:layout_width="175dp"
                android:text="Age Range:" />

            <Spinner
                android:id="@+id/age_range_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dp"
                android:prompt="@string/more_fragment_age_range" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/more_fragment_private"/>

    </LinearLayout>


</FrameLayout>