<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:textAlignment="center"
    tools:context=".PermissionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="154dp"
        android:layout_marginTop="84dp"
        android:background="#00F8F2F2"
        android:contentDescription="@string/permission_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_on_white_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="295dp"
        android:layout_height="132dp"
        android:layout_marginTop="116dp"
        android:text="@string/permission_description"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="242dp"
        android:layout_height="63dp"
        android:onClick="setupPermission"
        android:text="@string/permission_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.439" />
</androidx.constraintlayout.widget.ConstraintLayout>